fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC26AdGroupImpThreeCheckRule.dsl
test 1 広告が1件投入する場合:
   2019/01/31 21:01:00:
       AC26AdGroupImpThreeCheckEvent:
           media: "YSS"              # 媒体
           adProjectSeq: 26001       # 広告案件SEQ
           adProject: "広告案件２６" # 広告案件
           accountId: 100            # アカウントID
           campaignId: 200           # キャンペーンID
           adGroupId: 300            # 広告グループID
test 2 広告が複数件投入する場合:
   2019/01/31 21:01:00:
       AC26AdGroupImpThreeCheckEvent:
           media: "YDN"              # 媒体
           adProjectSeq: 26002       # 広告案件SEQ
           adProject: "広告案件２６" # 広告案件
           accountId: 102            # アカウントID
           campaignId: 202           # キャンペーンID
           adGroupId: 302            # 広告グループID
   2019/01/31 21:02:00:
       AC26AdGroupImpThreeCheckEvent:
           media: "YDN"              # 媒体
           adProjectSeq: 26003       # 広告案件SEQ
           adProject: "広告案件２６" # 広告案件
           accountId: 103            # アカウントID
           campaignId: 203           # キャンペーンID
           adGroupId: 303            # 広告グループID